pricing section done

--- a/source/index.html
+++ b/source/index.html
@@ -20,5 +20,9 @@
 
     //= templates/sections/case_study.html
 
+    //= templates/sections/stats.html
+
+    //= templates/sections/our_pricing.html
+
 </body>
 </html>
