keep in touch and footer section done

--- a/source/index.html
+++ b/source/index.html
@@ -24,5 +24,11 @@
 
     //= templates/sections/our_pricing.html
 
+    //= templates/sections/our_blog.html
+
+    //= templates/sections/keep-in-touch.html
+
+    //= templates/sections/footer.html
+
 </body>
 </html>
