paths for images fixed

--- a/source/index.html
+++ b/source/index.html
@@ -10,27 +10,27 @@
 <body>
 
     <!--Header import-->
-    //= templates/sections/header.html
+    //= sections/header.html
 
-    //= templates/sections/our_history.html
+    //= sections/our_history.html
 
-    //= templates/sections/our_services.html
+    //= sections/our_services.html
 
-    //= templates/sections/recent_works.html
+    //= sections/recent_works.html
 
-    //= templates/sections/case_study.html
+    //= sections/case_study.html
 
-    //= templates/sections/stats.html
+    //= sections/stats.html
 
-    //= templates/sections/our_pricing.html
+    //= sections/our_pricing.html
 
-    //= templates/sections/our_blog.html
+    //= sections/our_blog.html
 
-    //= templates/sections/keep-in-touch.html
+    //= sections/keep-in-touch.html
 
-    //= templates/sections/footer.html
+    //= sections/footer.html
 
-    //= templates/sections/socials.html
+    //= sections/socials.html
 
 </body>
 </html>
