--- a/source/index.html
+++ b/source/index.html
@@ -32,5 +32,8 @@
 
     //= sections/socials.html
 
+<script src="vendor/jquery-3.2.1.min.js"></script>
+<script src="vendor/jquery.validate.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
