--- a/source/sections/recent_works.html
+++ b/source/sections/recent_works.html
@@ -18,14 +18,14 @@
     </div>
 
     <div class="recent-works__images">
-        <img src="images/recent_works_1.jpg" alt="" class="recent-works__images__item">
-        <img src="images/recent_works_2.jpg" alt="" class="recent-works__images__item">
-        <img src="images/recent_works_3.jpg" alt="" class="recent-works__images__item">
-        <img src="images/recent_works_4.jpg" alt="" class="recent-works__images__item">
-        <img src="images/recent_works_5.jpg" alt="" class="recent-works__images__item">
-        <img src="images/recent_works_6.jpg" alt="" class="recent-works__images__item">
-        <img src="images/recent_works_7.jpg" alt="" class="recent-works__images__item">
-        <img src="images/recent_works_8.jpg" alt="" class="recent-works__images__item">
+        <img src="images/recent_works_1.jpg" alt="" class="recent-works__images__item" draggable="false">
+        <img src="images/recent_works_2.jpg" alt="" class="recent-works__images__item" draggable="false">
+        <img src="images/recent_works_3.jpg" alt="" class="recent-works__images__item" draggable="false">
+        <img src="images/recent_works_4.jpg" alt="" class="recent-works__images__item" draggable="false">
+        <img src="images/recent_works_5.jpg" alt="" class="recent-works__images__item" draggable="false">
+        <img src="images/recent_works_6.jpg" alt="" class="recent-works__images__item" draggable="false">
+        <img src="images/recent_works_7.jpg" alt="" class="recent-works__images__item" draggable="false">
+        <img src="images/recent_works_8.jpg" alt="" class="recent-works__images__item" draggable="false">
     </div>
     
 </section>
