--- a/source/sections/recent_works.html
+++ b/source/sections/recent_works.html
@@ -8,24 +8,32 @@
     </div>
 
     <div class="recent-works__tags">
-            <li class="recent-works__tags__item">all</li>
-            <li class="recent-works__tags__item">print design</li>
-            <li class="recent-works__tags__item">animation</li>
-            <li class="recent-works__tags__item">art</li>
-            <li class="recent-works__tags__item">web design</li>
-            <li class="recent-works__tags__item">photography</li>
-            <li class="recent-works__tags__item">video</li>
+            <li class="recent-works__tags__item" data-filter="all">all</li>
+            <li class="recent-works__tags__item" data-filter="print">print design</li>
+            <li class="recent-works__tags__item" data-filter="animation">animation</li>
+            <li class="recent-works__tags__item" data-filter="art">art</li>
+            <li class="recent-works__tags__item" data-filter="web">web design</li>
+            <li class="recent-works__tags__item" data-filter="photo">photography</li>
+            <li class="recent-works__tags__item" data-filter="video">video</li>
     </div>
 
     <div class="recent-works__images">
-        <img src="images/recent_works_1.jpg" alt="" class="recent-works__images__item" draggable="false">
-        <img src="images/recent_works_2.jpg" alt="" class="recent-works__images__item" draggable="false">
-        <img src="images/recent_works_3.jpg" alt="" class="recent-works__images__item" draggable="false">
-        <img src="images/recent_works_4.jpg" alt="" class="recent-works__images__item" draggable="false">
-        <img src="images/recent_works_5.jpg" alt="" class="recent-works__images__item" draggable="false">
-        <img src="images/recent_works_6.jpg" alt="" class="recent-works__images__item" draggable="false">
-        <img src="images/recent_works_7.jpg" alt="" class="recent-works__images__item" draggable="false">
-        <img src="images/recent_works_8.jpg" alt="" class="recent-works__images__item" draggable="false">
+        <img src="images/recent_works_1.jpg" alt="" class="recent-works__images__item recent-works-web" draggable="false">
+
+        <img src="images/recent_works_2.jpg" alt="" class="recent-works__images__item recent-works-photo" draggable="false">
+
+        <img src="images/recent_works_3.jpg" alt="" class="recent-works__images__item recent-works-art" draggable="false">
+
+        <img src="images/recent_works_4.jpg" alt="" class="recent-works__images__item recent-works-video " draggable="false">
+
+        <img src="images/recent_works_5.jpg" alt="" class="recent-works__images__item recent-works-print" draggable="false">
+
+        <img src="images/recent_works_6.jpg" alt="" class="recent-works__images__item recent-works-animation" draggable="false">
+
+        <img src="images/recent_works_7.jpg" alt="" class="recent-works__images__item recent-works-photo" draggable="false">
+
+        <img src="images/recent_works_8.jpg" alt="" class="recent-works__images__item recent-works-art" draggable="false">
+
     </div>
     
 </section>
